[gd_scene load_steps=6 format=3 uid="uid://draofau05xvbu"]

[ext_resource type="Script" path="res://scripts/mud.gd" id="1_cjf45"]
[ext_resource type="Texture2D" uid="uid://jy4b0bgtjq40" path="res://sprites/bike.png" id="1_xdv6u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_smmu0"]
atlas = ExtResource("1_xdv6u")
region = Rect2(64, 0, 64, 36)

[sub_resource type="SpriteFrames" id="SpriteFrames_majvf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smmu0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nd87j"]
size = Vector2(43, 22)

[node name="Mud" type="Area2D"]
script = ExtResource("1_cjf45")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_majvf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_nd87j")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
